# WarZoneWebApp/swagger.json
@@ -5,11 +5,6 @@
     "title": "My Title",
     "version": "1.0.0"
   },
-  "consumes": [
-    "application/json",
-    "text/json",
-    "application/*+json"
-  ],
   "paths": {
     "/api/Consent": {
       "post": {
@@ -17,6 +12,11 @@
           "Consent"
         ],
         "operationId": "Consent_AddCustomer",
+        "consumes": [
+          "application/json",
+          "text/json",
+          "application/*+json"
+        ],
         "parameters": [
           {
             "name": "customer",
@@ -34,6 +34,31 @@
             "description": "",
             "schema": {
               "type": "file"
+            }
+          }
+        }
+      }
+    },
+    "/api/Offer": {
+      "post": {
+        "tags": [
+          "Offer"
+        ],
+        "operationId": "Offer_GetWeapons",
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "responses": {
+          "200": {
+            "x-nullable": false,
+            "description": "",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Weapon"
+              }
             }
           }
         }
@@ -70,6 +95,21 @@
           "format": "int32"
         }
       }
+    },
+    "Weapon": {
+      "allOf": [
+        {
+          "$ref": "#/definitions/ModelBase"
+        },
+        {
+          "type": "object",
+          "properties": {
+            "weaponName": {
+              "type": "string"
+            }
+          }
+        }
+      ]
     }
   }
 }
